# BlueFlame

./: .editorconfig  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  HOW_IT_WORKS.md  README.md  ROADMAP.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: App.css  App.tsx  ascii.ts  main.tsx  useFavicons.ts  useWebviewOverlay.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  tab-webviews.json
src-tauri/examples/: gen_icon.rs
src-tauri/icons/: icon.icns
src-tauri/src/: body_analysis.rs  brand.rs  browser.rs  ca.rs  ca_trust.rs  commands.rs  context_menu.rs  debug_log.rs  dns.rs  downloads.rs  embedded_tor.rs  favicons.rs  filter_parser.rs  import_export.rs  lib.rs  list_loader.rs  main.rs  metasearch.rs  metrics.rs  new_tab.rs  pip_icon.rs  proxy.rs  reputation.rs  search.rs  security.rs  session.rs  socks_connector.rs  storage.rs  tls_verifier.rs  trust.rs  util.rs
src/components/: BlockLog.tsx  Bookmarks.tsx  BookmarksBar.tsx  CaTrustModal.tsx  ChromeMenu.tsx  ContextMenu.tsx  Dashboard.tsx  Debug.tsx  Downloads.tsx  FindBar.tsx  Footprint.tsx  MenuPopup.tsx  Metrics.tsx  MobileChrome.tsx  PersonalIndex.tsx  Settings.tsx  Sidebar.tsx  TabStrip.tsx  TabSwitcher.tsx  TitleBar.tsx  TrustPopup.tsx  UrlBar.tsx
